# ptr

./: .bazelignore  .bazelrc  .gitignore  BUILD  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  http_client.cpp  http_server.cpp  main.cpp
app/: BUILD  BUILD.bazel  client.cpp  config.json  main.cpp  server.cpp
calculator/: BUILD.bazel
calculator/include/: Calculator.hpp
calculator/src/: Calculator.cpp
hello/: BUILD  greet.cc  greet.h  hello.cc  time_util.cc  time_util.h
include/: Calculator.hpp
include/mylib/: json_utils.h  person.h  student.h  utils.h
lib/core/: BUILD  greeter.cpp
lib/core/include/core/: greeter.h
lib/util/: BUILD  str_utils.cpp
lib/util/include/util/: str_utils.h
main/: BUILD  main.cc
modules/module_a/: BUILD  a.cc  a.h
modules/module_b/: BUILD  b.cc  b.h
signal/: main  main.cpp
src/: BUILD  Calculator.cpp  hello.cpp  hello_test.cpp  json_utils.cpp  main.cpp  person.cpp  student.cpp
tests/: BUILD  str_utils_test.cpp  test_hello.cpp  test_main.cpp
