# MODULE.bazel
bazel_dep(name = "bazel_skylib", version = "1.4.2")

# C++ 工具链定义（使用本地工具链）
toolchain(
    name = "local_config_cc_toolchains",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    exec_compatible_with = [
        "@platforms//os:linux",
        # "@platforms//os:macos",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        # "@platforms//os:macos",
    ],
    toolchain = "@local_config_cc//:toolchain",
)